--- a/landing.html
+++ b/landing.html
@@ -5,7 +5,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Welcome/title>
+    <title>Welcome<title>
 
     <!-- Begin Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
