--- a/index.html
+++ b/index.html
@@ -109,15 +109,12 @@
                 <li style="background-image:url('images/1.jpg');">
                     <!-- <span class="image-caption">Image 1 Caption</span> -->
                 </li>
-                <li style="background-image:url('images/2.jpg');">
-                    <!-- <span class="image-caption">Image 2 Caption</span> -->
-                </li>
             </ul>
 
-            <div class="nav">
+            <!-- <div class="nav">
                 <span class="prev"></span>
                 <span class="next"></span>
-            </div>
+            </div> -->
 
         </div>
     </main>
