--- a/contact.html
+++ b/contact.html
@@ -132,12 +132,11 @@
         </div>
 
         <div class="social-links">
-            <ul>
-                <li><a href="#" class="icons-facebook"></a></li>
-                <li><a href="#" class="icons-twitter"></a></li>
-                <li><a href="#" class="icons-instagram"></a></li>
-                <li><a href="#" class="icons-behance"></a></li>
-            </ul>
+          <ul>
+              <li><a href="https://www.facebook.com/HankOrion" class="icons-facebook"></a></li>
+              <li><a href="https://www.twitter.com/HankOrion" class="icons-twitter"></a></li>
+              <li><a href="https://www.instagram.com/HankOrion" class="icons-instagram"></a></li>
+          </ul>
         </div>
 
     </footer>
