--- a/contact.html
+++ b/contact.html
@@ -109,12 +109,12 @@
     <main class="page extra-padding">
         <div class="inner-container">
 
-            <h1 class="page-header">Contact Me</h1>
+            <!-- <h1 class="page-header">Contact Me</h1> -->
 
             <center><p>Drop me a message at info@hankorion.com
             </p></center>
             <br>
-            <center><p>Please don't send unsolicited material. Thank you
+            <center><p>I love connecting with new people, but please don't send unsolicited material including scripts, films etc. If you have a film you want to discuss reach out first. Thank you for understanding.
             </p></center>
 
 
