--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
             <center><p>Drop me a message at info@hankorion.com
             </p></center>
             <br>
-            <center><p>I love connecting with new people, but please don't send unsolicited material including scripts, films etc. If you have a film you want to discuss reach out first. Thank you for understanding.
+            <center><p>I love connecting with new people, but please don't send unsolicited material including scripts, films etc. If you have a film, a video or any other project you want to discuss please reach out first. Thank you for understanding.
             </p></center>
 
 
