--- a/join-patreon.html
+++ b/join-patreon.html
@@ -5,7 +5,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Hank Orion | Courses</title>
+    <title>Hank Orion | Join Me</title>
 
     <!-- Begin Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -38,7 +38,7 @@
 
     <!-- Begin Loader -->
     <div class="preloader">
-        <p>LEARN FILMMAKING</p>
+        <p>BECOME A SUPPORTER</p>
         <span class="circle"></span>
     </div>
     <!-- End Loader -->
@@ -75,7 +75,7 @@
                 </li>
 
                 <li>
-                  <a class="active" href="join-patreon.html">PATREON</a>
+                    <a class="active" href="join-patreon.html">PATREON</a>
                 </li>
 
                 <li>
@@ -102,95 +102,42 @@
     <!-- End Header -->
 
     <!-- Begin Main -->
-    <main>
-        <div class="portfolio grid three-columns">
-            <div class="articles-wrapper">
+    <main class="project style-2">
+        <div class="article-wrapper">
 
-                <article>
-                    <div class="article-wrapper">
+            <div class="cover slider">
 
-                        <figure>
-                            <img src="images/c1.jpg" alt="">
-                        </figure>
+                <div class="horizontal-slider full" data-mousewheel="false">
+                    <div class="swiper-container" id="swiper-full-1">
+                        <div class="swiper-wrapper">
 
-                        <a href="how-to-make-indie-film.html" class="overlay">
-                            <h2 class="title">How To Make Independent Feature Film On A Budget</h2>
-                        </a>
-
+                            <figure class="swiper-slide" style="background-image:url('images/patreon.jpg');">
+                            </figure>
+                        </div>
                     </div>
-                </article>
-
-                <article>
-                    <div class="article-wrapper">
-
-                        <figure>
-                            <img src="images/c2.jpg" alt="">
-                        </figure>
-
-                        <a href="how-to-produce-a-movie.html" class="overlay">
-                            <h2 class="title">How To Produce A Low Budget Independent Feature Film!</h2>
-                        </a>
-
-                    </div>
-                </article>
-
-                <article>
-                    <div class="article-wrapper">
-
-                        <figure>
-                            <img src="images/c3.jpg" alt="">
-                        </figure>
-
-                        <a href="how-to-design-a-movie-poster.html" class="overlay">
-                            <h2 class="title">How To Design A Great Movie Poster That Works</h2>
-                        </a>
-
-                    </div>
-                </article>
-
-                <article>
-                    <div class="article-wrapper">
-
-                        <figure>
-                            <img src="images/c4.jpg" alt="">
-                        </figure>
-
-                        <a href="how-to-edit-a-feature-film.html" class="overlay">
-                            <h2 class="title">How To Edit A Feature Film By Yourself!</h2>
-                        </a>
-
-                    </div>
-                </article>
-
-                <article>
-                    <div class="article-wrapper">
-
-                        <figure>
-                            <img src="images/c5.jpg" alt="">
-                        </figure>
-
-                        <a href="how-to-write-a-movie.html" class="overlay">
-                            <h2 class="title">Learn How To Write Independent Film Screenplay</h2>
-                        </a>
-
-                    </div>
-                </article>
-
-                <article>
-                    <div class="article-wrapper">
-
-                        <figure>
-                            <img src="images/c6.jpg" alt="">
-                        </figure>
-
-                        <a href="how-to-be-a-movie-director.html" class="overlay">
-                            <h2 class="title">Being Independent Movie Director</h2>
-                        </a>
-
-                    </div>
-                </article>
+                </div>
 
             </div>
+
+            <div class="content">
+                <div class="row full">
+
+                    <div class="row boxed">
+
+                        <p>
+Independent filmmaking is hard. As an independent filmmaker I have to work two, and sometimes even more jobs to be able to pay rent and at the same time to be able to make films. The reality of modern filmmaking is that it’s oversaturated, and every year it becomes harder and harder to finance a movie. Hence why I keep working hard and save money to be able to make a film. Because filmmaking makes me happy. So if at the end of the day you decided to become my supporter you’ll get supporter only updates, videos and posts. Click below and check out my Patreon page and become a supporter (and remember you can cancel anytime).
+</p>
+
+<center><a href="https://www.patreon.com/directorhank">
+  <img src="images/joinme.png">
+</a></center>
+                        <span class="divider30"></span>
+
+                    </div>
+
+                </div>
+            </div>
+
         </div>
     </main>
     <!-- End Main -->
@@ -200,14 +147,6 @@
 
         <div class="copyrights">
             <p>© Hank Orion | All Rights Reserved</p>
-        </div>
-
-        <div class="social-links">
-          <ul>
-              <li><a href="https://www.facebook.com/HankOrion" class="icons-facebook"></a></li>
-              <li><a href="https://www.twitter.com/HankOrion" class="icons-twitter"></a></li>
-              <li><a href="https://www.instagram.com/HankOrion" class="icons-instagram"></a></li>
-          </ul>
         </div>
 
     </footer>
