--- a/how-to-be-a-movie-director.html
+++ b/how-to-be-a-movie-director.html
@@ -75,7 +75,7 @@
                 </li>
 
                 <li>
-                    <a class="active" href="https://www.patreon.com/directorhank">PATREON</a>
+                  <a class="active" href="join-patreon.html">PATREON</a>
                 </li>
 
                 <li>
