--- a/404.html
+++ b/404.html
@@ -33,13 +33,15 @@
 
             <!-- <h1 class="page-header">Contact Me</h1> -->
 <br>
+<br>
+<br>
             <center><h1>404
             </h1></center>
             <br>
             <center><h3>
               Page Not Found
             </h3></center>
-
+            <center><a href="index.html">Go Back</a></center>
 
             <span class="divider20"></span>
 
