--- a/join-patreon.html
+++ b/join-patreon.html
@@ -107,15 +107,9 @@
 
             <div class="cover slider">
 
-                <div class="horizontal-slider full" data-mousewheel="false">
-                    <div class="swiper-container" id="swiper-full-1">
-                        <div class="swiper-wrapper">
-
-                            <figure class="swiper-slide" style="background-image:url('images/patreon.jpg');">
-                            </figure>
-                        </div>
-                    </div>
-                </div>
+<!-- Image -->
+<img src="images/patreon.jpg" class="responsive">
+<!-- End Image -->
 
             </div>
 
