--- a/movies-2.html
+++ b/movies-2.html
@@ -9,9 +9,9 @@
 
     <!-- Begin Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="A Photography Template by CodeSymbol"/>
+    <meta name="description" content="Hank Orion is a writer, director, producer and vlogger."/>
     <meta name="keywords" content="HTML, CSS, JavaScript, Responsive, Photography"/>
-    <meta name="author" content="CodeSymbol"/>
+    <meta name="author" content="Hank Orion"/>
     <!-- End Meta Tags -->
 
     <link rel="icon" href="images/icon_dark.png" />
