--- a/the-job.html
+++ b/the-job.html
@@ -108,9 +108,9 @@
 <!-- Trailer -->
             <div class="cover video">
 
-                <!-- <div class="video-container">
+                <div class="video-container">
                     <iframe width="420" height="250" src="https://www.youtube.com/embed/0Ywos_goZ2w" allowfullscreen></iframe>
-                </div> -->
+                </div>
 
                 <div class="overlay">
                     <h1 class="title">The Job</h1>
