--- a/movies.html
+++ b/movies.html
@@ -113,7 +113,7 @@
                             <img src="images/comingsoon.jpg" alt="">
                         </figure>
 
-                        <a href="#" class="overlay">
+                        <a href="osaka.html" class="overlay">
                             <h2 class="title">Osaka</h2>
 
                             <span class="categories">
@@ -149,7 +149,7 @@
                             <img src="images/comingsoon.jpg" alt="">
                         </figure>
 
-                        <a href="#" class="overlay">
+                        <a href="outsiders.html" class="overlay">
                             <h2 class="title">Outsiders</h2>
 
                             <span class="categories">
