--- a/outsiders.html
+++ b/outsiders.html
@@ -126,7 +126,7 @@
                     <div class="row boxed">
 <!-- About film -->
                         <p>
-A trip to the remote forest in northern England goes terribly wrong when two best friends Josh and Nicole meet another hiker in the woods that ruins Josh's plans.
+Josh and Nicole were planning on spending the day hiking in the remote forest in northern England, but their plans went awry when they ran into another hiker in the woods.
                         </p>
 <!-- End About -->
 
