--- a/how-to-write-a-movie.html
+++ b/how-to-write-a-movie.html
@@ -157,6 +157,13 @@ You will learn what it takes to write a great screenplay for an independent feat
                                     <p class="label">Available At</p>
                                     <p class="text"><a href="https://www.udemy.com/course/independent-film-screenwriting/?referralCode=58974EE1299F68B4AE23">Udemy</a></p>
                                     <p class="text"><a href="https://www.skillshare.com/classes/Learn-How-To-Write-Independent-Film-Screenplay/1957573366/projects?teacherRef=540775786&via=teacher-referral&utm_campaign=teacher-referral&utm_source=ShortUrl&utm_medium=teacher-referral">Skillshare</a></p>
+<br>
+                                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                                  <input type="hidden" name="cmd" value="_s-xclick">
+                                  <input type="hidden" name="hosted_button_id" value="ZJDLGXS8VGUD4">
+                                  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                                  <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+                                  </form>
                                 </div>
 
                             </div>
