--- a/movies.html
+++ b/movies.html
@@ -106,7 +106,7 @@
         <div class="portfolio grid two-columns">
             <div class="articles-wrapper">
 
-                <article>
+                <!-- <article>
                     <div class="article-wrapper">
 
                         <figure>
@@ -122,9 +122,9 @@
                         </a>
 
                     </div>
-                </article>
+                </article> -->
 
-                <article>
+                <!-- <article>
                     <div class="article-wrapper">
 
                         <figure>
@@ -140,9 +140,9 @@
                         </a>
 
                     </div>
-                </article>
+                </article> -->
 
-                <article>
+                <!-- <article>
                     <div class="article-wrapper">
 
                         <figure>
@@ -158,7 +158,7 @@
                         </a>
 
                     </div>
-                </article>
+                </article> -->
 
                 <article>
                     <div class="article-wrapper">
