--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </li>
 
                 <li>
-                  <a class="active" href="join-patreon.html">PATREON</a>
+                  <a class="active" href="join-patreon.html">JOIN ME</a>
                 </li>
 
                 <li>
@@ -106,8 +106,8 @@
         <div class="flexslider full">
 
             <ul class="slides">
-                <li style="background-image:url('images/4.jpg');">
-                    <!-- <span class="image-caption">Image 1 Caption</span> -->
+                <li style="background-image:url('images/index.jpg');">
+                    <span class="image-caption">Just a guy, following his dream.</span>
                 </li>
             </ul>
 
