--- a/join-patreon.html
+++ b/join-patreon.html
@@ -75,7 +75,7 @@
                 </li>
 
                 <li>
-                    <a class="active" href="join-patreon.html">PATREON</a>
+                  <a class="active" href="join-patreon.html">JOIN ME</a>
                 </li>
 
                 <li>
@@ -108,7 +108,7 @@
             <div class="cover slider">
 
 <!-- Image -->
-<img src="images/patreon.jpg" class="responsive">
+<!-- <img src="images/patreon.jpg" class="responsive"> -->
 <!-- End Image -->
 
             </div>
@@ -117,14 +117,28 @@
                 <div class="row full">
 
                     <div class="row boxed">
-
+<center><h1>Become A Supporter</h1></center>
                         <p>
-Independent filmmaking is hard. As an independent filmmaker I have to work two, and sometimes even more jobs to be able to pay rent and at the same time to be able to make films. The reality of modern filmmaking is that it’s oversaturated, and every year it becomes harder and harder to finance a movie. Hence why I keep working hard and save money to be able to make a film. Because filmmaking makes me happy. So if at the end of the day you decided to become my supporter you’ll get supporter only updates, videos and posts. Click below and check out my Patreon page and become a supporter (and remember you can cancel anytime).
+If you like what I do, consider donating to my PayPal or joining my Patreon. Independent filmmaking is hard. Every year it becomes harder and harder to make a film, to finance a film and to get it out there to the audiences. Everything goes to help me do what I love, and do it better every time.
 </p>
 
-<center><a href="https://www.patreon.com/directorhank">
-  <img src="images/joinme.png">
-</a></center>
+<!-- Image -->
+<!-- <center><a href="https://www.patreon.com/directorhank">
+<img src="images/patreon2.jpg" width="20%" class="responsive">
+</a></center> -->
+<!-- End Image -->
+
+<!-- Test -->
+<center><div class="row">
+  <div class="column">
+    <a href="https://www.patreon.com/directorhank">
+    <img src="images/patreon2.jpg" width="20%" class="responsive">
+    </a> </div>
+  <div class="column">
+    <a href="">
+    <img src="images/pp.png" width="20%" class="responsive">
+    </a> </div>
+</div></center>
                         <span class="divider30"></span>
 
                     </div>
