--- a/honey-and-wine.html
+++ b/honey-and-wine.html
@@ -75,7 +75,7 @@
                 </li>
 
                 <li>
-                  <a class="active" href="join-patreon.html">PATREON</a>
+                  <a class="active" href="join-patreon.html">JOIN ME</a>
                 </li>
 
                 <li>
