--- a/join-patreon.html
+++ b/join-patreon.html
@@ -135,7 +135,7 @@ If you like what I do, consider donating to my PayPal or joining my Patreon. Ind
     <img src="images/patreon2.jpg" width="20%" class="responsive">
     </a> </div>
   <div class="column">
-    <a href="">
+    <a href="https://paypal.me/hankorion">
     <img src="images/pp.png" width="20%" class="responsive">
     </a> </div>
 </div></center>
