--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <!-- Begin Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Hank Orion is a writer, director, producer and vlogger."/>
-    <meta name="keywords" content="HTML, CSS, JavaScript, Responsive, Photography"/>
+    <meta name="description" content="I'm a film director who vlogs about my life and my work. Welcome to my official website."/>
+    <meta name="keywords" content="filmmaking, film director, screenwriter, youtuber, filmmaker youtuber, learn filmmaking, hank orion official website, hank orion"/>
     <meta name="author" content="Hank Orion"/>
     <!-- End Meta Tags -->
 
