--- a/contact.html
+++ b/contact.html
@@ -107,11 +107,11 @@
 
             <!-- <h1 class="page-header">Contact Me</h1> -->
 
-            <center><p>Drop me a message at info@hankorion.com
-            </p></center>
-            <br>
-            <center><p>I love connecting with new people, but please don't send unsolicited material including scripts, films etc. If you have a film, a video or any other project you want to discuss please reach out first. Thank you for understanding.
-            </p></center>
+            <center>
+            <p>If you have a question or just want to say hi drop me a message at hank@hankorion.com and I’ll get back to you as soon as I can :)</p>
+            <p>If you want to sponsor my YouTube videos please email at sponsorship@hankorion.com</p>
+            <p>Disclaimer: Please don't send me unsolicited material<br> including scripts, films, ideas, concepts etc. <br>Thank you for understanding.</p>
+          </center>
 
 
             <span class="divider20"></span>
