--- a/join-patreon.html
+++ b/join-patreon.html
@@ -132,7 +132,7 @@ If you like what I do, consider donating to my PayPal or joining my Patreon. Ind
 <center><div class="row">
   <div class="column">
     <a href="https://www.patreon.com/directorhank">
-    <img src="images/patreon2.jpg" width="20%" class="responsive">
+    <img src="images/patreon.png" width="20%" class="responsive">
     </a> </div>
   <div class="column">
     <a href="https://paypal.me/hankorion">
