--- a/join-patreon.html
+++ b/join-patreon.html
@@ -131,6 +131,10 @@ If you like what I do, consider donating to my PayPal or joining my Patreon. Ind
 <!-- Test -->
 <center><div class="row">
   <div class="column">
+    <a href="https://youtube.com/directorhank/join">
+    <img src="images/yt.png" width="20%" class="responsive">
+    </a> </div>
+  <div class="column">
     <a href="https://www.patreon.com/directorhank">
     <img src="images/patreon.png" width="20%" class="responsive">
     </a> </div>
