--- a/love-in-the-city.html
+++ b/love-in-the-city.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML>
-<html lang="en-US" class="fullscreen">
+<html lang="en-US">
 
 <!-- Begin Head -->
 <head>
 
     <meta charset="utf-8">
-    <title>Hank Orion</title>
+    <title>Hank Orion | Love In The City</title>
 
     <!-- Begin Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="I'm a film director who vlogs about my life and my work. Welcome to my official website."/>
-    <meta name="keywords" content="filmmaking, film director, screenwriter, youtuber, filmmaker youtuber, learn filmmaking, hank orion official website, hank orion"/>
+    <meta name="description" content="Hank Orion is a writer, director, producer and vlogger."/>
+    <meta name="keywords" content="HTML, CSS, JavaScript, Responsive, Photography"/>
     <meta name="author" content="Hank Orion"/>
     <!-- End Meta Tags -->
 
@@ -33,12 +33,12 @@
 
 
 <!-- Begin Body -->
-<body class="fullscreen">
+<body>
 
 
     <!-- Begin Loader -->
     <div class="preloader">
-        <p>WELCOME</p>
+        <p>LOADING</p>
         <span class="circle"></span>
     </div>
     <!-- End Loader -->
@@ -102,21 +102,88 @@
     <!-- End Header -->
 
     <!-- Begin Main -->
-    <main>
-        <div class="flexslider full">
+    <main class="project style-2">
+        <div class="article-wrapper">
 
-            <ul class="slides">
-                <li style="background-image:url('images/index_1.jpg');">
-                    <span class="image-caption">Just a guy, following his dream.</span>
-                </li>
-                <li style="background-image:url('images/index.jpg');">
-                    <span class="image-caption">Just a guy, following his dream.</span>
-                </li>
-            </ul>
-            <!-- <div class="nav">
-                <span class="prev"></span>
-                <span class="next"></span>
-            </div> -->
+<!-- Trailer -->
+            <div class="cover video">
+
+                <!-- <div class="video-container">
+                    <iframe width="420" height="250" src="https://www.youtube.com/embed/kAFNtILukL0" allowfullscreen></iframe>
+                </div> -->
+
+                <div class="overlay">
+                    <h1 class="title">Love In The City</h1>
+                    <span class="categories">Romance, Comedy</span>
+                </div>
+
+            </div>
+<!-- End Trailer -->
+
+            <div class="content">
+                <div class="row full">
+
+                    <div class="row boxed">
+<!-- About film -->
+                        <p>Two complete strangers, are set up on a blind date by their friends. They meet on the bustling streets of London and, despite their differences, they find themselves falling for each other.</p>
+<!-- End About -->
+
+<!-- Film Still -->
+                        <div class="column four-fourth last">
+
+                            <figure>
+                                    <img src="images/cs.jpg" alt="">
+                            </figure>
+
+                        </div>
+<!-- End Still -->
+
+                        <span class="divider50"></span>
+
+<!-- Little Credits -->
+                        <div class="row space">
+
+                            <div class="column four-fourth">
+
+                                <div class="info-label">
+                                    <p class="label">Director</p>
+                                    <p class="text">Hank Orion</p>
+                                </div>
+
+                                <div class="info-label">
+                                    <p class="label">Producer</p>
+                                    <p class="text">Vadim Pusceddu</p>
+                                </div>
+
+                                <div class="info-label">
+                                    <p class="label">Run Time:</p>
+                                    <p class="text">80 minutes</p>
+                                </div>
+
+                                <div class="info-label">
+                                    <p class="label">Starring</p>
+                                    <p class="text">Jessica Fraulo Ryder</p>
+                                    <p class="text">Dan Blacka</p>
+                                </div>
+
+                                <div class="info-label">
+                                    <p class="label">Year</p>
+                                    <p class="text">2022</p>
+                                </div>
+
+                                <!-- <div class="info-label">
+                                    <p class="label">Links</p>
+                                    <p class="text"><a href="https://www.imdb.com/title/tt13588604">IMDb</a></p>
+                                </div> -->
+
+                            </div>
+
+                        </div>
+<!-- End Credits -->
+                    </div>
+
+                </div>
+            </div>
 
         </div>
     </main>
@@ -129,17 +196,8 @@
             <p>© Hank Orion | All Rights Reserved</p>
         </div>
 
-        <div class="social-links">
-            <ul>
-                <li><a href="https://www.facebook.com/HankOrion" class="icons-facebook"></a></li>
-                <li><a href="https://www.twitter.com/HankOrion" class="icons-twitter"></a></li>
-                <li><a href="https://www.instagram.com/HankOrion" class="icons-instagram"></a></li>
-            </ul>
-        </div>
-
     </footer>
     <!-- End Footer -->
-
 
     <!-- Begin JavaScript -->
     <script src="js/jquery.js"></script>
