--- a/movies.html
+++ b/movies.html
@@ -124,15 +124,15 @@
                     </div>
                 </article> -->
 
-                <!-- <article>
+                <article>
                     <div class="article-wrapper">
 
                         <figure>
-                            <img src="images/comingsoon.jpg" alt="">
+                            <img src="images/cs2.jpg" alt="">
                         </figure>
 
-                        <a href="#" class="overlay">
-                            <h2 class="title">The Room</h2>
+                        <a href="not-a-game-night.html" class="overlay">
+                            <h2 class="title">Not A Game Night</h2>
 
                             <span class="categories">
                                 <span>Pre-Production</span>
@@ -140,25 +140,25 @@
                         </a>
 
                     </div>
-                </article> -->
+                </article>
 
-                <!-- <article>
+                <article>
                     <div class="article-wrapper">
 
                         <figure>
-                            <img src="images/comingsoon.jpg" alt="">
+                            <img src="images/cs2.jpg" alt="">
                         </figure>
 
-                        <a href="outsiders.html" class="overlay">
-                            <h2 class="title">Outsiders</h2>
+                        <a href="love-in-the-city.html" class="overlay">
+                            <h2 class="title">Love In The City</h2>
 
                             <span class="categories">
-                                <span>Filming</span>
+                                <span>Pre-Production</span>
                             </span>
                         </a>
 
                     </div>
-                </article> -->
+                </article>
 
                 <article>
                     <div class="article-wrapper">
