--- a/love-in-the-city.html
+++ b/love-in-the-city.html
@@ -126,13 +126,14 @@
                     <div class="row boxed">
 <!-- About film -->
                         <p>Two complete strangers, are set up on a blind date by their friends. They meet on the bustling streets of London and, despite their differences, they find themselves falling for each other.</p>
+                        <p>Coming Soon</p>
 <!-- End About -->
 
 <!-- Film Still -->
                         <div class="column four-fourth last">
 
                             <figure>
-                                    <img src="images/cs.jpg" alt="">
+                                    <img src="images/f6.jpg" alt="">
                             </figure>
 
                         </div>
@@ -171,10 +172,10 @@
                                     <p class="text">2022</p>
                                 </div>
 
-                                <!-- <div class="info-label">
+                                <div class="info-label">
                                     <p class="label">Links</p>
-                                    <p class="text"><a href="https://www.imdb.com/title/tt13588604">IMDb</a></p>
-                                </div> -->
+                                    <p class="text"><a href="https://www.imdb.com/title/tt21375000">IMDb</a></p>
+                                </div>
 
                             </div>
 
