--- a/movies.html
+++ b/movies.html
@@ -146,14 +146,14 @@
                     <div class="article-wrapper">
 
                         <figure>
-                            <img src="images/cs2.jpg" alt="">
+                            <img src="images/love.jpg" alt="">
                         </figure>
 
                         <a href="love-in-the-city.html" class="overlay">
                             <h2 class="title">Love In The City</h2>
 
                             <span class="categories">
-                                <span>Pre-Production</span>
+                                <span>Romance,Comedy</span>
                             </span>
                         </a>
 
