--- a/courses.html
+++ b/courses.html
@@ -101,6 +101,25 @@
     </header>
     <!-- End Header -->
 
+    <center>
+<div class="headertext">
+    <p>As an independent filmmaker who was born in Ukraine, and due to recent tragic events in Ukraine I wanted to show my gratitude for all the help and support Ukraine is getting from around the world. A lot of my family members are in Ukraine and I hope this war will come to an end soon.
+
+I know it's not much, but I have made all my courses completely free. (Please use Udemy links to enrol)</p>
+</div>
+
+<style>
+.headertext{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 50px;
+    margin-left: 50px;
+}
+</style>
+
+  </center>
+
+
     <!-- Begin Main -->
     <main>
         <div class="portfolio grid three-columns">
