--- a/movies.html
+++ b/movies.html
@@ -124,7 +124,7 @@
                     </div>
                 </article> -->
 
-                <article>
+                <!-- <article>
                     <div class="article-wrapper">
 
                         <figure>
@@ -140,7 +140,7 @@
                         </a>
 
                     </div>
-                </article>
+                </article> -->
 
                 <article>
                     <div class="article-wrapper">
