love in the city

--- a/love-in-the-city.html
+++ b/love-in-the-city.html
@@ -125,8 +125,9 @@
 
                     <div class="row boxed">
 <!-- About film -->
-                        <p>Two complete strangers, are set up on a blind date by their friends. They meet on the bustling streets of London and, despite their differences, they find themselves falling for each other.</p>
-                        <p>Coming Soon</p>
+                        <p>
+                            Two complete strangers are set up on a blind date by their friends. They meet on the bustling streets of London and, despite their differences, they find themselves falling for each other.
+                        </p>
 <!-- End About -->
 
 <!-- Film Still -->
