--- a/i-see-darkness.html
+++ b/i-see-darkness.html
@@ -108,9 +108,9 @@
 <!-- Trailer -->
             <div class="cover video">
 
-                <div class="video-container">
+                <!-- <div class="video-container">
                     <iframe width="420" height="250" src="https://www.youtube.com/embed/kAFNtILukL0" allowfullscreen></iframe>
-                </div>
+                </div> -->
 
                 <div class="overlay">
                     <h1 class="title">I See Darkness</h1>
