--- a/movies.html
+++ b/movies.html
@@ -106,33 +106,15 @@
         <div class="portfolio grid two-columns">
             <div class="articles-wrapper">
 
-                <!-- <article>
-                    <div class="article-wrapper">
-
-                        <figure>
-                            <img src="images/comingsoon.jpg" alt="">
-                        </figure>
-
-                        <a href="osaka.html" class="overlay">
-                            <h2 class="title">Osaka</h2>
-
-                            <span class="categories">
-                                <span>Coming Soon</span>
-                            </span>
-                        </a>
-
-                    </div>
-                </article> -->
-
-                <!-- <article>
+                <article>
                     <div class="article-wrapper">
 
                         <figure>
                             <img src="images/cs2.jpg" alt="">
                         </figure>
 
-                        <a href="not-a-game-night.html" class="overlay">
-                            <h2 class="title">Not A Game Night</h2>
+                        <a href="spooked.html" class="overlay">
+                            <h2 class="title">Spooked</h2>
 
                             <span class="categories">
                                 <span>Pre-Production</span>
@@ -140,7 +122,25 @@
                         </a>
 
                     </div>
-                </article> -->
+                </article>
+
+                <article>
+                    <div class="article-wrapper">
+
+                        <figure>
+                            <img src="images/cs2.jpg" alt="">
+                        </figure>
+
+                        <a href="joy.html" class="overlay">
+                            <h2 class="title">Joy</h2>
+
+                            <span class="categories">
+                                <span>Pre-Production</span>
+                            </span>
+                        </a>
+
+                    </div>
+                </article>
 
                 <article>
                     <div class="article-wrapper">
