--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
                 <span class="prev"></span>
                 <span class="next"></span>
             </div> -->
-
         </div>
     </main>
     <!-- End Main -->
-
     <!-- Begin Footer -->
     <footer>
 
         <div class="copyrights">
+            <h2>Test</h2>
+
             <p>© Hank Orion | All Rights Reserved</p>
         </div>
 
